--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,7 @@ pdf2image==1.16.2
 pillow==9.4.0
 pytesseract==0.3.10
 scikit-image==1.10.1
+stow==1.2.1.1
+tqdm==4.65.0
 virtualenv==20.17.1
 tensorflow==2.11.0
